<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/dialog_margin_top_bottom"
    android:layout_marginBottom="@dimen/dialog_margin_top_bottom"
    android:layout_marginLeft="@dimen/dialog_margin_left_right"
    android:layout_marginRight="@dimen/dialog_margin_left_right"
    android:background="@drawable/xml_bg_dialog_profile" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:src="@drawable/img_user_profile_top_background" />


    <com.drooble.youlocal.ui.view.YLCircularImageView
        android:id="@+id/image_view_profile_image"
        android:layout_width="@dimen/dialog_profile_image_size"
        android:layout_height="@dimen/dialog_profile_image_size"
        android:layout_margin="@dimen/dialog_offset"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view_profile_image"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:text="@string/text_username" />

    <TextView
        android:id="@+id/txt_about_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_username"
        android:layout_marginTop="@dimen/dialog_offset"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:text="@string/text_about_me" />

    <TextView
        android:id="@+id/txt_about_me_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txt_about_me"
        android:paddingBottom="@dimen/dialog_offset"
        android:paddingLeft="@dimen/dialog_offset"
        android:paddingRight="@dimen/dialog_offset"
        android:scrollbars="vertical"
        android:gravity="center_horizontal|top"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:text="@string/text_lorem_ipsum" />

</RelativeLayout>