<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img_you_local_logo" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/grp_inputs_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorFloatingText"
            custom:errorEnabled="true"
            custom:hintAnimationEnabled="true" >

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:hint="@string/text_username"
                android:background="@drawable/bg_edit_text"
                android:textCursorDrawable="@null"
                android:textColor="@android:color/white"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorFloatingText"
            custom:errorEnabled="true"
            custom:hintAnimationEnabled="true" >

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/text_password"
                android:background="@drawable/bg_edit_text"
                android:textCursorDrawable="@null"
                android:textColor="@android:color/white"/>

        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:id="@+id/btn_login"
            android:transitionName="test_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:background="@drawable/xml_reveal_effect" >

            <TextView
                android:id="@+id/txt_of_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_login"
                android:textColor="@color/colorPrimary"
                android:textAllCaps="true"/>

        </FrameLayout>

        <TextView
            android:id="@+id/btn_forgotten_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_small_offset"
            android:padding="@dimen/fab_margin"
            android:gravity="center"
            android:text="@string/text_forgotten_password"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:background="@android:color/transparent" />

    </LinearLayout>

</LinearLayout>
